--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   height: 100px;
   padding: 0;
   overflow: hidden;
-  background-color: rgb(35, 116, 30);
+  background-color: rgb(24 65 22);
 }
 
 li {
